[project]
name = "smokerstatusprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "polars>=0.20.4",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "colorspace>=1.0.0",
]
